--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_riverpod: ^3.0.3
   multi_split_view: ^3.6.1
   docking: ^1.16.1
+  shared_preferences: ^2.5.3
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
