--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   uuid: ^4.5.2
   desktop_multi_window: ^0.3.0
   window_manager: ^0.5.1
+  super_drag_and_drop: ^0.9.1
 
 dev_dependencies:
   flutter_test:
