--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   desktop_multi_window: ^0.3.0
   window_manager: ^0.5.1
   super_drag_and_drop: ^0.9.1
+  screen_retriever: ^0.2.0
 
 dev_dependencies:
   flutter_test:
